RESOLVED FIXED272014
[WebGPU] Metal compilation errors should be sent to the Device's validation error
https://bugs.webkit.org/show_bug.cgi?id=272014
Summary [WebGPU] Metal compilation errors should be sent to the Device's validation e...
Mike Wyrzykowski
Reported 2024-04-01 22:56:20 PDT
[WebGPU] Metal compilation errors should be sent to the Device's validation error
Attachments
Radar WebKit Bug Importer
Comment 1 2024-04-01 22:56:34 PDT
Mike Wyrzykowski
Comment 2 2024-04-04 21:32:27 PDT
EWS
Comment 3 2024-04-05 23:39:17 PDT
Committed 277155@main (dbf2de7cd0b3): <https://commits.webkit.org/277155@main> Reviewed commits have been landed. Closing PR #26888 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.